--- a/src/app/meta-list/meta-list.component.html
+++ b/src/app/meta-list/meta-list.component.html
@@ -1,10 +1,11 @@
+<app-meta-nav></app-meta-nav>
 <div class="meta-data">
     <div *ngFor="let metaItem of metaItems" class="meta-item">
         <div class="profile-img">
-            <img width="100%" height="100%" [src]='metaItem.profile_url' onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';"/>
+            <a [href]="'/' + type + '/' + metaItem.name"><img width="100%" height="100%" [src]='metaItem.profile_url' onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';"/></a>
         </div>
         <div class="intro">
-            <p>{{formatter.convertStarname(metaItem.name)}}  ({{metaItem.counter}})</p>
+            <p>({{metaItem.counter}})&nbsp;&nbsp;<a [href]="'/' + type + '/' + metaItem.name"><span class="meta-link">{{formatter.convertStarname(metaItem.name)}}</span></a></p>
         </div>
     </div>
 </div>
