--- a/src/app/content-list/content-list.component.html
+++ b/src/app/content-list/content-list.component.html
@@ -5,14 +5,14 @@
     </div>
     <div *ngFor="let content of contents; let i = index" [id]="'item-' + i" class="content-card">
         <div class="content-card-img">
-            <a [href]="'/content/' + content._id">
+            <a [routerLink]="'/content/' + content._id">
               <img [src]="content.imgSummaryUrl" onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';">
             </a>
             <span *ngIf="content.duration" class="duration">&nbsp;{{formatter.convertDuration(content.duration)}}&nbsp;</span>
         </div>
         <div class="content-card-info">
             <div class="card-title">
-              <a [href]="'/content/' + content._id"><span class="text-concat">{{content.title}}</span></a>
+              <a [routerLink]="'/content/' + content._id"><span class="text-concat">{{content.title}}</span></a>
             </div>
             <div *ngIf="content.starnames.length > 0" class="sub-info">
               <span class="tag-value">{{content.starnames.length === 1? 'Pornstar': 'Pornstars'}}: {{formatter.convertStarnames(content.starnames)}}</span>
