--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -7,20 +7,20 @@
       <div id="sub-info">
        <div id="starnames">
          <div class="star-profile" *ngFor="let starname of content.starnames">
-          <a class="starname-link" [href]="'/pornstar/' + starname"><img class="profile-image" src="/assets/images/download.jpg"></a>
-           <p><a class="starname-link" [href]="'/pornstar/' + starname">{{formatter.convertStarname(starname)}}</a></p>
+          <a class="starname-link" [routerLink]="'/pornstar/' + starname"><img class="profile-image" src="/assets/images/download.jpg"></a>
+           <p><a class="starname-link" [routerLink]="'/pornstar/' + starname">{{formatter.convertStarname(starname)}}</a></p>
          </div>
        </div>
        <div id="other-info">
         <p><span class="field-name">Category: </span>
-          <a *ngFor="let category of content.genres.slice(0, content.genres.length-1)" [href]="'/category/' + category">{{formatter.convertStarname(category)}},&nbsp;</a>
-          <a *ngIf="content.genres[content.genres.length-1]" [href]="'/category/' + content.genres[content.genres.length-1]">{{formatter.convertStarname(content.genres[content.genres.length-1])}}</a>
+          <a *ngFor="let category of content.genres.slice(0, content.genres.length-1)" [routerLink]="'/category/' + category">{{formatter.convertStarname(category)}},&nbsp;</a>
+          <a *ngIf="content.genres[content.genres.length-1]" [routerLink]="'/category/' + content.genres[content.genres.length-1]">{{formatter.convertStarname(content.genres[content.genres.length-1])}}</a>
         </p>
         <p><span class="field-name">Studio: </span>
-          <a [href]="'/studio/' + content.studio">{{formatter.convertStarname(content.studio)}}</a>
+          <a [routerLink]="'/studio/' + content.studio">{{formatter.convertStarname(content.studio)}}</a>
         </p>
         <p><span class="field-name">Director: </span>
-          <a [href]="'/director/' + content.director">{{formatter.convertStarname(content.director)}}</a>
+          <a [routerLink]="'/director/' + content.director">{{formatter.convertStarname(content.director)}}</a>
         </p>
         <p><span class="field-name">Released on: </span>{{formatter.convertDate(content.releaseDate)}}</p>
        </div>
