--- a/src/app/side-content-list/side-content-list.component.html
+++ b/src/app/side-content-list/side-content-list.component.html
@@ -2,14 +2,14 @@
 <div *ngFor="let content of contents">
       <div class="card-media">
         <div class="recommend-img">
-          <a [href]="'/content/' + content._id">
+          <a [routerLink]="'/content/' + content._id">
             <img style="width:168px;height:100px;" [src]="content.imgSummaryUrl" onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';">
           </a>
           <span *ngIf="content.duration" class="duration">&nbsp;{{formatter.convertDuration(content.duration)}}&nbsp;</span>
         </div>
         <div class="card-media-info">
             <div class="title ellipsis">
-              <a [href]="'/content/' + content._id"><span class="text-concat">{{content.title}}</span></a>
+              <a [routerLink]="'/content/' + content._id"><span class="text-concat">{{content.title}}</span></a>
             </div>
             <div *ngIf="content.starnames.length > 0" class="sub-info">
               <span class="tag-value">{{content.starnames.length === 1? 'Pornstar': 'Pornstars'}}: {{formatter.convertStarnames(content.starnames)}}</span>
