--- a/src/app/content-nav/content-nav.component.html
+++ b/src/app/content-nav/content-nav.component.html
@@ -1,5 +1,5 @@
 <div id="nav-top">
-    <div *ngIf="type !== 'list'" id="nav-type">
+    <div *ngIf="type !== 'list' && type !== 'search'" id="nav-type">
         <p><span>{{formatter.convertStarname(type_value)}}</span></p><p><span>Porn Videos</span></p>
     </div>
     <div id="nav-sort">
