--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -21,11 +21,14 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+    padding-bottom: 4px;
+    box-shadow: 1px 2px 2px rgb(220,220,220);
     button{
         background-color: white;
         color:black;
     }
    .search-input{
+       padding-top: 3px;
        border-style: solid;
        border-width: 0 0 1px 0;
        width: 80%;
