--- a/src/app/function-panel/function-panel.component.scss
+++ b/src/app/function-panel/function-panel.component.scss
@@ -34,6 +34,7 @@ button:focus {
         .single-item{
             margin:auto;
             button{
+                font-size: 14px;
                 border:0px;
                 margin: 3px 0 3px 0;
                 font-weight: normal;
@@ -42,7 +43,7 @@ button:focus {
             }
             button:hover{
                 cursor: pointer;
-            font-weight: bold;
+                font-weight: bold;
             }
         }
         
