--- a/src/app/watch-later-list/watch-later-list.component.scss
+++ b/src/app/watch-later-list/watch-later-list.component.scss
@@ -1,25 +1,63 @@
 /**
 * 
 */
-.watchlater-list-container{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    margin: 10px 40px 10px 40px;
-    justify-content: center
+$num-item-per-page: 60;
+@mixin grid-template-areas-generator($num-item, $num-item-per-row){
+    $num-item-row: ceil($num-item / $num-item-per-row);
+    $counter:0;
+    @for $col from 1 through $num-item-row {
+        @for $row from 1 through $num-item-per-row{
+            $counter: $counter + 1;
+            #waterlater-item-#{$counter} {
+                grid-row: $col / span 1;
+                grid-column: $row / span 1;
+                
+            }
+        }
+    }
+}
+@mixin contents-block($gap, $num-item, $num-item-per-row, $width: 85%){
+    $num-item-row: ceil($num-item / $num-item-per-row);
+    margin: 10px auto 10px auto;
+    width: $width;
+    display: grid;
+    //grid-template-columns: repeat($num-item-per-row,auto);
+    grid-auto-columns: $num-item-per-row;
+    grid-template-rows: repeat($num-item-row, auto);
+    grid-column-gap: $gap;
+    grid-row-gap: $gap;
+    //justify-items: stretch;
+    //align-items: stretch;
+    //justify-content: center;
+    .content-card{
+        width: 100%;
+        .content-card-img{
+            width: 100%;
+            //height: ceil($width-x * 0.6);
+            //height: 130px;
+        }
+        
+    }
 }
 
+.frame-player{
+    margin: 0;
+    padding: 0;
+    //width: 100%;
+    //height: 100%;
+}
 
+.uncensored{
+    font-weight: bold;
+    background-color: red;
+    border-radius: 2px;
+}
 
 .content-card{
     background-color:rgb(255, 255,255);
     box-shadow: 1px 2px 2px rgb(240, 240, 240);
-    width: 240px;
-    height: 254px;
     margin: 3px;
     .content-card-img{
-        width: 100%;
-        height: 144px;
         position: relative;
         .duration{
             position: absolute;
@@ -49,7 +87,7 @@
     }
  
     .content-card-info{
-        height: 110px;
+        max-height: 110px;
         padding: 10px;
         .card-title {
             position: relative;
@@ -80,8 +118,37 @@
     }    
 }
 
-.uncensored{
-    font-weight: bold;
-    background-color: red;
-    border-radius: 2px;
+
+
+@media screen and (min-width:1630px) and (max-width:1880px){
+    .watchlater-list-container{
+        @include contents-block(6px,30 ,5fr);
+    }
+    @include grid-template-areas-generator(30,5);
+    
+}
+@media screen and (min-width:1100px) and (max-width:1630px){
+    .watchlater-list-container{
+        @include contents-block(6px, 30 ,4fr);
+    }
+    @include grid-template-areas-generator(30,4);
+}
+@media screen and (min-width:820px) and (max-width:1100px){
+    .watchlater-list-container{
+        @include contents-block(6px, 30 ,3fr);
+    }
+    @include grid-template-areas-generator(30,3);
+}
+@media screen and (min-width:600px) and (max-width:820px){
+    .watchlater-list-container{
+        @include contents-block(6px, 30 ,2fr, 90%);
+    }
+    @include grid-template-areas-generator(30,2);
+}
+@media screen and (max-width:600px){
+    .watchlater-list-container{
+        @include contents-block(5px, 30 ,1fr, 95%);
+    }
+    @include grid-template-areas-generator(30,1);
+    
 }
