--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -26,13 +26,15 @@
     button{
         background-color: white;
         color:black;
+        font-size: 13px;
     }
    .search-input{
        padding-top: 3px;
        border-style: solid;
        border-width: 0 0 1px 0;
-       width: 80%;
+       width: 100%;
        align-self: center;
+       font-size:12px;
    }
 }
 .search-input{
