--- a/src/app/content-list/content-list.component.scss
+++ b/src/app/content-list/content-list.component.scss
@@ -16,59 +16,144 @@ $num-item-per-page: 60;
         }
     }
 }
-@mixin contents-block( $gap, $num-item, $num-item-per-row, $width:85%){
-    $num-item-row: ceil($num-item / $num-item-per-row);
+@mixin contents-block( $num-item, $gap, $num-columns, $column-width, $width){
+    $num-rows: ceil($num-item / $num-columns);
     margin: 10px auto 10px auto;
     display: grid;
-    grid-auto-columns: $num-item-per-row;
-    width: $width;
-    grid-template-rows: repeat($num-item-row, auto);
-    grid-column-gap: $gap;
-    grid-row-gap: $gap;
-    justify-items: stretch;
-    align-items: stretch;
-    justify-content: center;
-    img{
-        width: 100%;
-        //height: ceil(width * 0.6);
-    }
+    width: $width; // num-columns * $column-width  + gap * (num-columns - 1)
+    grid-template-columns: repeat($num-columns, $column-width);
+    grid-template-rows: repeat($num-rows, auto);
+    grid-gap: $gap $gap; // row gap and col gap
+    justify-items: stretch; // e.g. a grid width is 200px, if the internal content is less then 200px, how to do
+    align-items: stretch;// y-axis
+    justify-content: start; // e.g. a row has 3 grid, but only one grid is used. how to position the grid.
+    align-content: start; // y-axis
+   // background-color: red;
+    
 }
 
-.contet-list-container{
-    @include contents-block(60px,6px, 30 ,6);
-}
-@include grid-template-areas-generator(30,6);
-@media screen and (min-width:1630px) and (max-width:1880px){
-    .contet-list-container{
-        @include contents-block( 6px,30 ,5fr);
-    }
-    @include grid-template-areas-generator(30,5);
-}
-@media screen and (min-width:1100px) and (max-width:1630px){
-    .contet-list-container{
-        @include contents-block(6px, 30 ,4fr);
+
+@media screen and (min-width:1100px){
+    .content-list-container{
+        // 250 * 4 = 1000 + 10 * 3 = 1030,
+        // 80 margin
+        @include contents-block(30, 10px, 4, 250px, 1030px);
     }
     @include grid-template-areas-generator(30,4);
 }
-@media screen and (min-width:820px) and (max-width:1100px){
-    .contet-list-container{
-        @include contents-block( 6px, 30 ,3fr);
+@media screen and (min-width:850px) and (max-width:1099px){
+    .content-list-container{
+        // 250 * 3 = 750 + 10 * 2 = 770,
+        // 850 - 770 = 80 / 2 = 40;
+        @include contents-block(30, 10px, 3, 250px, 770px);
     }
     @include grid-template-areas-generator(30,3);
 }
-@media screen and (min-width:600px) and (max-width:820px){
-    .contet-list-container{
-        @include contents-block(6px, 30 ,2fr, 90%);
-    }
-    @include grid-template-areas-generator(30,2);
-}
-@media screen and (max-width:600px){
-    .contet-list-container{
-        @include contents-block(5px, 30 ,1fr, 95%);
+
+
+// for mobile, and assuming mobile, 850px;
+@media screen and (min-width:800px) and (max-width:849px){
+    // pixel plus 823, X 812
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 800px, 800px);
     }
     @include grid-template-areas-generator(30,1);
 }
+@media screen and (min-width:750px) and (max-width:799px){
+    // unknow
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 750px, 750px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:700px) and (max-width:749px){
+    // plus 736,pixel 2 731
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 700px, 700px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:650px) and (max-width:699px){
+    // unknown
+    .content-list-container{
+        // (650px - 6 ) /2 = 644 / 2 = 322
+        @include contents-block(30, 6px, 1, 650px, 650px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:600px) and (max-width:649px){
+    // s5 640
+    .content-list-container{
+        // (600px - 6 ) /2 = 594 / 2 = 297
+        @include contents-block(30, 6px, 1, 600px, 600px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:576px) and (max-width:559px){
+    // unknown 
+    .content-list-container{
+        // (576px - 6 ) /2 = 285
+        @include contents-block(30, 6px, 1, 576px, 576px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+
+@media screen and (min-width:550px) and (max-width:575px){
+    // iphone 5 568
+    .content-list-container{
+        // (550px - 6 ) /2 = 272
+        @include contents-block(30, 6px, 1, 550px, 550px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+
+@media screen and (min-width:450px) and (max-width:549px){
+    // no phones
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 450px, 450px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+
+@media screen and (min-width:390px) and (max-width:449px){
+    // iphone plus 414
+    // (390px - 6) / 2 = 
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 390px, 390px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:375px) and (max-width:389px){
+    // unkown
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 375px, 375px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:360px) and (max-width:374px){
+    // iphone 6
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 360px, 360px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:320px) and (max-width:359px){
+    // s5 (360px) and below
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 320px, 320px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (max-width:319px){
+    // iphone 5 (320px) and below
+    .content-list-container{
+        @include contents-block(30, 6px, 1, 300px, 300px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+
 .content-card{
+    display: flex;
     background-color:rgb(255, 255,255);
     box-shadow: 1px 2px 2px rgb(240, 240, 240);
     
