--- a/src/app/watch-later-list/watch-later-list.component.html
+++ b/src/app/watch-later-list/watch-later-list.component.html
@@ -1,19 +1,36 @@
 <div class="watchlater-list-container">
-    <div *ngFor="let content of contents; let i = index" [id]="'waterlater-item-' + (i + 1)" class="content-card">
-        <div *ngIf="isMoblie" class="content-card-img"><!-- [ngStyle]="{'height':content_card_img_height}">-->
-            
-            <img *ngIf="playing_id !== content._id" (click)="playVideo(content._id, content.videoUrl)" width="100%" height="100%" [src]="content.imgSummaryUrl" onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';">
-            <iframe *ngIf="playing_id === content._id" class="frame-player" width="100%" [height]="iframe_height" allowfullscreen [src]="safeUrl"  frameborder="0"></iframe>
+    <div *ngFor="let content of contents; let i = index" 
+        [id]="'waterlater-item-' + (i + 1)" 
+        class="content-card"
+        [ngStyle]="{'flex-direction':flex_direction}">
+        
+        <div *ngIf="isMoblie" class="content-card-img">
+            <img *ngIf="playing_id !== content._id" 
+                (click)="playVideo(content._id, content.videoUrl)" 
+                [ngStyle]="{'width':image_width,'height':image_height}"  
+                [src]="content.imgSummaryUrl" 
+                onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';"/>
+            <iframe *ngIf="playing_id === content._id" 
+                class="frame-player" 
+                [width]="image_width" 
+                [height]="image_height" 
+                allowfullscreen 
+                [src]="safeUrl"  
+                frameborder="0"></iframe>
             <span *ngIf="content.duration" class="duration">&nbsp;{{formatter.convertDuration(content.duration)}}&nbsp;</span>
             <i class="far fa-times-circle" (click)="removeWatchLater(i, content._id)"></i>
         </div>
-        <div *ngIf="!isMoblie" class="content-card-img"><!-- [ngStyle]="{'height':content_card_img_height}">-->
+        <div *ngIf="!isMoblie" class="content-card-img">
             <a [routerLink]="'/content/' + content._id">
-                <img width="100%" height="100%" [src]="content.imgSummaryUrl" onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';">
+                <img [ngStyle]="{'width':image_width,'height':image_height}"  
+                [src]="content.imgSummaryUrl" 
+                onerror="this.onerror=null;this.src='/assets/images/photo_not_available.jpg';"/>
             </a>
             <span *ngIf="content.duration" class="duration">&nbsp;{{formatter.convertDuration(content.duration)}}&nbsp;</span>
             <i class="far fa-times-circle" (click)="removeWatchLater(i, content._id)"></i>
         </div>
+
+
         <div class="content-card-info">
             <div class="card-title">
               <a [routerLink]="'/content/' + content._id"><span class="text-concat">{{content.title}}</span></a>
