--- a/src/app/watch-later-list/watch-later-list.component.scss
+++ b/src/app/watch-later-list/watch-later-list.component.scss
@@ -1,44 +1,7 @@
 /**
 * 
 */
-$num-item-per-page: 60;
-@mixin grid-template-areas-generator($num-item, $num-item-per-row){
-    $num-item-row: ceil($num-item / $num-item-per-row);
-    $counter:0;
-    @for $col from 1 through $num-item-row {
-        @for $row from 1 through $num-item-per-row{
-            $counter: $counter + 1;
-            #waterlater-item-#{$counter} {
-                grid-row: $col / span 1;
-                grid-column: $row / span 1;
-                
-            }
-        }
-    }
-}
-@mixin contents-block($gap, $num-item, $num-item-per-row, $width: 85%){
-    $num-item-row: ceil($num-item / $num-item-per-row);
-    margin: 10px auto 10px auto;
-    width: $width;
-    display: grid;
-    //grid-template-columns: repeat($num-item-per-row,auto);
-    grid-auto-columns: $num-item-per-row;
-    grid-template-rows: repeat($num-item-row, auto);
-    grid-column-gap: $gap;
-    grid-row-gap: $gap;
-    //justify-items: stretch;
-    //align-items: stretch;
-    //justify-content: center;
-    .content-card{
-        width: 100%;
-        .content-card-img{
-            width: 100%;
-            //height: ceil($width-x * 0.6);
-            //height: 130px;
-        }
-        
-    }
-}
+
 
 .frame-player{
     margin: 0;
@@ -56,7 +19,7 @@ $num-item-per-page: 60;
 .content-card{
     background-color:rgb(255, 255,255);
     box-shadow: 1px 2px 2px rgb(240, 240, 240);
-    margin: 3px;
+    display: flex;
     .content-card-img{
         position: relative;
         .duration{
@@ -117,38 +80,146 @@ $num-item-per-page: 60;
         }
     }    
 }
-
-
-
-@media screen and (min-width:1630px) and (max-width:1880px){
-    .watchlater-list-container{
-        @include contents-block(6px,30 ,5fr);
+$num-item-per-page: 60;
+@mixin grid-template-areas-generator($num-item, $num-item-per-row){
+    $num-item-row: ceil($num-item / $num-item-per-row);
+    $counter:0;
+    @for $col from 1 through $num-item-row {
+        @for $row from 1 through $num-item-per-row{
+            $counter: $counter + 1;
+            #waterlater-item-#{$counter} {
+                grid-row: $col / span 1;
+                grid-column: $row / span 1;
+                
+            }
+        }
     }
-    @include grid-template-areas-generator(30,5);
-    
 }
-@media screen and (min-width:1100px) and (max-width:1630px){
+@mixin contents-block( $num-item, $gap, $num-columns, $column-width, $width){
+    $num-rows: ceil($num-item / $num-columns);
+    margin: 10px auto 10px auto;
+    display: grid;
+    width: $width; // num-columns * $column-width  + gap * (num-columns - 1)
+    grid-template-columns: repeat($num-columns, $column-width);
+    grid-template-rows: repeat($num-rows, auto);
+    grid-gap: $gap $gap; // row gap and col gap
+    justify-items: stretch; // e.g. a grid width is 200px, if the internal content is less then 200px, how to do
+    align-items: stretch;// y-axis
+    justify-content: start; // e.g. a row has 3 grid, but only one grid is used. how to position the grid.
+    align-content: start; // y-axis
+    background-color: rgb(255,255,255);
+}
+
+
+@media screen and (min-width:1100px){
     .watchlater-list-container{
-        @include contents-block(6px, 30 ,4fr);
+        @include contents-block(30, 10px, 4, 250px, 1030px);
     }
     @include grid-template-areas-generator(30,4);
 }
-@media screen and (min-width:820px) and (max-width:1100px){
+@media screen and (min-width:850px) and (max-width:1099px){
     .watchlater-list-container{
-        @include contents-block(6px, 30 ,3fr);
+        @include contents-block(30, 10px, 3, 250px, 770px);
     }
     @include grid-template-areas-generator(30,3);
 }
-@media screen and (min-width:600px) and (max-width:820px){
+// for mobile, and assuming mobile, 850px;
+@media screen and (min-width:800px) and (max-width:849px){
+    // pixel plus 823, X 812
     .watchlater-list-container{
-        @include contents-block(6px, 30 ,2fr, 90%);
-    }
-    @include grid-template-areas-generator(30,2);
-}
-@media screen and (max-width:600px){
-    .watchlater-list-container{
-        @include contents-block(5px, 30 ,1fr, 95%);
+        @include contents-block(30, 6px, 1, 800px, 800px);
     }
     @include grid-template-areas-generator(30,1);
-    
+}
+@media screen and (min-width:750px) and (max-width:799px){
+    // unknow
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 750px, 750px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:700px) and (max-width:749px){
+    // plus 736,pixel 2 731
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 700px, 700px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:650px) and (max-width:699px){
+    // unknown
+    .watchlater-list-container{
+        // (650px - 6 ) /2 = 644 / 2 = 322
+        @include contents-block(30, 6px, 1, 650px, 650px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:600px) and (max-width:649px){
+    // s5 640
+    .watchlater-list-container{
+        // (600px - 6 ) /2 = 594 / 2 = 297
+        @include contents-block(30, 6px, 1, 600px, 600px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:576px) and (max-width:559px){
+    // unknown 
+    .watchlater-list-container{
+        // (576px - 6 ) /2 = 285
+        @include contents-block(30, 6px, 1, 576px, 576px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+
+@media screen and (min-width:550px) and (max-width:575px){
+    // iphone 5 568
+    .watchlater-list-container{
+        // (550px - 6 ) /2 = 272
+        @include contents-block(30, 6px, 1, 550px, 550px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+
+@media screen and (min-width:450px) and (max-width:549px){
+    // no phones
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 450px, 450px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+
+@media screen and (min-width:390px) and (max-width:449px){
+    // iphone plus 414
+    // (390px - 6) / 2 = 
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 390px, 390px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:375px) and (max-width:389px){
+    // unkown
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 375px, 375px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:360px) and (max-width:374px){
+    // iphone 6
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 360px, 360px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (min-width:320px) and (max-width:359px){
+    // s5 (360px) and below
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 320px, 320px);
+    }
+    @include grid-template-areas-generator(30,1);
+}
+@media screen and (max-width:319px){
+    // iphone 5 (320px) and below
+    .watchlater-list-container{
+        @include contents-block(30, 6px, 1, 300px, 300px);
+    }
+    @include grid-template-areas-generator(30,1);
 }
